add images and enhance styles with new layout and scroll behavior

--- a/index.html
+++ b/index.html
@@ -1,16 +1,182 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="style.css">
-    </head>
-    <body>
-        
-       
-        <script src=""></script>
-    </body>
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <title>Narendra Modi India's Prime Minister</title>
+    <meta name="description" content="" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css"
+      integrity="sha512-1cK78a1o+ht2JcaW6g8OXYwqpev9+6GqOkz9xmBN9iUUhIndKtxwILGWYOSibOKjLsEdjyjZvYDq/cZwNeak0w=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+  </head>
+  <body>
+    <div id="Intro-part" data-aos="fade-down">
+      <section class="left">
+        <img src="photo3.png" />
+        <h3>Narendra Damodardas Modi</h3>
+        <h4>Introduction</h4>
+        <p>
+          Narendra Modi, the 14th Prime Minister of India, is one of the most
+          influential and dynamic leaders in modern Indian history. From humble
+          beginnings as a tea seller to leading the world’s largest democracy,
+          his journey is a testament to resilience, vision, and unwavering
+          dedication. Known for his strong leadership, innovative policies, and
+          a mission to make India a global power, Modi has reshaped the
+          country's political and economic landscape.
+        </p>
+      </section>
+      <section class="right">
+        <div class="top" data-aos="fade-left">
+          <div class="context">
+            <h4>Early Life and Struggles</h4>
+            <p>
+              <span data-aos="zoom-in">Narendra Damodardas Modi</span>was born
+              on September 17, 1950, in Vadnagar, a small town in Gujarat.
+              Coming from a modest background, he helped his father sell tea at
+              a railway station during his childhood. Despite financial
+              hardships, his determination for self-growth was evident from a
+              young age. His early years were marked by spiritual exploration—he
+              traveled across India, visiting ashrams and learning about
+              different cultures, which played a significant role in shaping his
+              ideology.
+            </p>
+          </div>
+          <div>
+            <img src="hometown.avif" />
+          </div>
+        </div>
+        <div class="bottom" data-aos="fade-right">
+          <div>
+            <img src="photo1.png" />
+          </div>
+          <div class="context">
+            <h4>Legacy and Influence</h4>
+            <p>
+              Modi’s journey from a humble tea seller to the leader of 1.4
+              billion people is inspiring. His governance has transformed India
+              into an emerging superpower, with strong economic growth,
+              infrastructure development, and a global presence. His life
+              embodies the values of self-reliance, nationalism, and unwavering
+              commitment to India’s progress. Whether one agrees or disagrees
+              with his policies, there is no denying that Narendra Modi has left
+              an indelible mark on India’s history.
+            </p>
+          </div>
+        </div>
+      </section>
+    </div>
+    <div id="EntryInPolitics">
+      <div class="linebarSection">
+        <h2>Entry into Politics</h2>
+        <div class="linebar"></div>
+      </div>
+      <div class="PoliticalContentSection">
+        <div class="journey" data-aos="fade-right">
+          <h4>Early Association with RSS</h4>
+          <p>
+            Narendra Modi joined the Rashtriya Swayamsevak Sangh (RSS) at a
+            young age, where he developed strong organizational and leadership
+            skills
+          </p>
+        </div>
+        <div class="journey" data-aos="fade-right">
+          <h4>Rise in BJP</h4>
+          <p>
+            Recognizing his dedication, RSS assigned him to the Bharatiya Janata
+            Party (BJP), where he played a key role in expanding the party’s
+            influence.
+          </p>
+        </div>
+        <div class="journey" data-aos="fade-right">
+          <h4>Strategic Leadership</h4>
+          <p>
+            Modi’s planning and ability to connect with the masses strengthened
+            BJP’s presence across India, making him a prominent
+            political figure.
+          </p>
+        </div>
+        <div class="journey" data-aos="fade-right">
+          <h4>Becoming the Prime Minister (2014)</h4>
+          <p>
+            In 2014, Modi led the BJP to a historic victory in the Lok Sabha
+            elections, winning a full majority after decades of coalition
+            governments. His campaign, based on development, governance, and
+            nationalism, resonated with millions. He was re-elected in 2019,
+            with an even bigger mandate.
+          </p>
+        </div>
+      </div>
+    </div>
+    <div id="Achivements">
+      <div class="AchievementsHeader">
+        <h2 data-aos="fade-right">Major Achievements as Prime Minister</h2>
+      </div>
+      <div class="Achivementscontent">
+        <div class="AchivBox">
+          <h4  data-aos="fade-right">1. Economic and Digital Revolution</h4>
+          <p  data-aos="zoom-in">
+            Make in India – Boosting domestic manufacturing and global
+            investments.
+            <br />
+            Digital India – Promoting technology, digital payments (UPI), and
+            internet access.
+            <br />
+            GST (Goods and Services Tax) – Simplifying India’s tax system for
+            businesses.
+          </p>
+        </div>
+        <div class="AchivBox">
+          <h4  data-aos="fade-right">2. Welfare and Social Reforms</h4>
+          <p  data-aos="zoom-in">
+            Swachh Bharat Abhiyan – A nationwide cleanliness drive, building
+            millions of toilets.
+            <br />
+            Jan Dhan Yojana – Opening millions of bank accounts for the poor.
+            <br />
+            Ayushman Bharat – Providing health insurance to millions of
+            underprivileged citizens.
+          </p>
+        </div>
+        <div class="AchivBox">
+          <h4  data-aos="fade-right">3. Abrogation of Article 370</h4>
+          <p  data-aos="zoom-in">
+            In 2019, his government revoked Article 370, removing Jammu & Kashmir’s special
+            <br>
+             status and integrating it fully into India, a historic and controversial decision.
+          </p>
+        </div>
+        <div class="AchivBox">
+          <h4  data-aos="fade-right">4. Global Recognition and Leadership</h4>
+          <p  data-aos="zoom-in">
+            Modi has elevated India’s status on the global stage:
+            <br />
+            Strengthening ties with world powers like the USA, Russia, and
+            Japan.
+            <br />
+            Promoting Yoga worldwide, leading to International Yoga Day
+            recognition by the UN.
+            <br />
+            Playing a key role in the G20 Summit and BRICS leadership.
+          </p>
+        </div>
+      </div>
+    </div>
+    <div id="footer">
+        <img src="photo2.png" data-aos="zoom-in">
+        <p>"I am a small man who wants to do big things for small people." – <span class="name">Narendra Modi</span></p>
+    </div>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"
+      integrity="sha512-A7AYk1fGKX6S2SsHywmPkrnzTZHrgiVT7GcQkLGDe2ev0aWb8zejytzS8wjo7PGEXKqJOrjQ4oORtnimIRZBtw=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
+    <script src="script.js"></script>
+  </body>
 </html>
